adding gh-pages

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 
 <head>
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css" />
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
@@ -28,23 +30,35 @@
             </li>
         </ul>
     </div> -->
-    
-        <p>Sou a index.html</p>
-    
-    <!--   <div data-role="footer" data-position="fixed">
+
+    <div class="zrqImagem">
+        <img src="images/iphone960.jpg" width="100%">
+    </div>
+    <!-- <div class="zrqCloudQuiz"></div> -->
+    <a href="cloudquiz.html">
+        <div class="zrqFooter1"></div>
+    </a>
+
+    <a href="info.html">
+        <div class="zrqFooter2"></div>
+    </a>
+
+
+
+    <!--   <div data-role=" footer " data-position="fixed ">
         <h1>Fixed Footer!</h1>
     </div> -->
 
-    <div data-role="footer" data-position="fixed">
-        <div data-role="navbar" data-iconpos="bottom">
+    <!--     <div data-role="footer " data-position="fixed ">
+        <div data-role="navbar " data-iconpos="bottom ">
             <ul>
-                <li><a href="index.html" data-icon="grid" class="ui-btn-active">Sumario</a>
+                <li><a href="index.html " data-icon="grid " class="ui-btn-active ">Sumario</a>
                 </li>
-                <li><a href="page1.html" data-icon="star">Jogo</a>
+                <li><a href="page1.html " data-icon="star ">Jogo</a>
                 </li>
             </ul>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
